--- a/style.css
+++ b/style.css
@@ -166,12 +166,12 @@ main{
    .img-bx:hover + .img-bx .about{
     visibility: visible;
    }
-   .secundaria{
+   #div_2{
     display: flex;
     flex-wrap: wrap;
     justify-content:center;    
     text-align: center;  
-    padding: 18% 8%;
+    padding: 15% 8%;
     background-color: palevioletred;
     align-content:center;
     
@@ -209,8 +209,36 @@ main{
     border-bottom-left-radius: 50%;
     font-weight: 600;
    }
-   
-   
+   .div_3{
+    background-image: url("imagens/photo2.jpg") ;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    align-items: center;
+    padding: 18% 8%;
+    width: 100%;  
+    height: 100%;      
+    justify-content: center;
+    position: relative;
+    display: inline-block;
+    overflow: auto;         
+   }   
+   .div_3 p{        
+   color: #fff;
+   font-size: 25px;
+   line-height: 30px;
+   font-family: monospace;
+   text-align: justify;
+   position: absolute; 
+   top: 0;
+   left: 0;
+   z-index: 1;
+   padding: 10% ;  
+   overflow: auto;    
+   background-color:rgba(0,0,0,0.5);   
+   text-shadow: black 0.1em 0.1em 0.2em;  
+   }
+      
    
 
 @media (max-width:600px) {
@@ -267,7 +295,7 @@ main{
     .text-bx .input-bx{
         justify-content: center;
     }
-    .secundaria{
+    .div_2{
         display: flex;
         flex-direction: column;
         
@@ -280,4 +308,13 @@ main{
         align-items: center;        
         
     }
+    .div_3{
+    height: 500px;     
+       }   
+       .div_3 p{               
+       font-size: 30px; 
+       text-align:left;
+       height: 100%;  
+         
+       }
 }
