--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@
 }
 body{    
     min-height: 100vh;
+    background-color: #08052e;
 }
 .container{
     max-width: 1000px;
     margin: 0 auto;   
-    background-color: pink; 
+    background-color: #08052e; 
 }
 nav{
     display: flex;
@@ -89,38 +90,22 @@ main{
     color: #fff;
 }
 .text-bx h2{
-    color: #f1676d;        
+    color: #fff;        
 }
 .text-bx p{
-    color: #372c62;
+    color: #fff;
     font-weight: 400;
     margin-top: 20px;
+    font-size: larger;
+    text-shadow: 
+               -1px -1px 0px #fa0c0c, 
+               -1px 1px 0px #fa0c0c,                    
+                1px -1px 0px #fa0c0c,                  
+                1px 0px 0px #fa0c0c;
 }
 .text-bx .input-bx{
     margin: 20px 0;
     display: flex;
-}
-.text-bx .input-bx input{
-    width: 60%;
-    display: block;
-    height: 50px;
-    padding: 10px;
-    border: none;
-    outline: none;
-    color: #8997b9;
-    font-size: 16px;
-}
-.text-bx .input-bx input::placeholder{
-    color: #8997b9;
-}
-.text-bx .input-bx button{
-    outline: none;
-    border: none;
-    padding: 10px 20px;
-    background-color: #5654b3;
-    color: white;
-    cursor: pointer;
-    font-size: 15px;
 }
 .medias-socias{
     margin-top: 30px;
@@ -178,7 +163,7 @@ main{
     justify-content:space-around;    
     text-align: center;  
     padding: 15% 8%;
-    background-color: palevioletred;
+    background-color: #08052e;
     align-content:center;
     
     
@@ -220,14 +205,15 @@ main{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border-radius: 30px;
     align-items: center;
     padding: 18% 8%;
     width: 100%;  
-    height: 100%;      
+    height: 500px;      
     justify-content: center;
     position: relative;
-    display: inline-block;
-    overflow: auto;         
+    display: flex;
+    overflow:auto;             
    }   
    .div_3 p{        
    color: #fff;
@@ -240,15 +226,18 @@ main{
    left: 0;
    z-index: 1;
    padding: 10% ;  
-   overflow: auto;    
+   overflow: auto;
    background-color:rgba(0,0,0,0.9  );   
    text-shadow: black 0.1em 0.1em 0.2em;  
    }
    .form{
     width: 100%;
-    background-color: #467402;
+    background-color: #08052e;
     display: flex;
     justify-content: space-between;
+    border: 0;
+    margin: 0;
+    color: #fff;
   }
   .form input{
     margin: 3px;
@@ -256,22 +245,37 @@ main{
   input#msg{
     height: 50%;
   }
-  .info{
+  .info_campos{
   width: 40%;
   display: flex;
   flex-direction: column;
-  padding: 5%;
+  padding: 15% 5%;
   }
-  .campos{
-  width: 40%;
-    display: flex;
-    flex-direction: column;
-    padding: 5%;
-  }
+  .info_campos h1{
+    font-size: 20px;
+    padding: 5px;    
+    }
+
+    .info_campos h2{
+        font-size: 15px;
+        padding: 5px;
+        }
   input::placeholder{
     color: darkkhaki;
     float:left;
   }
+  .whatsapp{
+    position:fixed;
+    bottom:20px;
+    right:30px;
+    z-index: 2;
+  }
+    footer{
+    height: 100px;
+    width: 100%;
+    background-color: blueviolet;
+  }
+
          
 
 @media (max-width:970px) {
